# skill-grade

./: README.md  action.yml  pyproject.toml
skill_grade/: __init__.py  checker.py  cli.py
